# Proxene

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dashboard  README.md  WEEK3.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  test_features.py  test_proxy.py
.github/workflows/: ci.yml
dashboard/: app.py
docs/: bounty_mode.md
policies/: default.yaml
proxene/: __init__.py  cli.py  main.py
proxene/core/: cache.py  proxy.py
proxene/guards/: cost_guard.py  pii_detector.py
proxene/middleware/: otel.py  rate_limiter.py
proxene/policies/: loader.py
scripts/: run_dashboard.py  test_proxy.py
tests/: test_cost_guard.py  test_e2e.py  test_integration.py  test_pii_detector.py  test_policy_loader.py
vscode-extension/: README.md  package.json
vscode-extension/src/: controlProvider.ts  extension.ts  logsProvider.ts  proxeneManager.ts
