[project]
name = "proxene"
version = "0.1.0-alpha"
description = "Developer-First AI Governance Proxy"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "redis (>=6.2.0,<7.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "opentelemetry-api (>=1.35.0,<2.0.0)",
    "opentelemetry-sdk (>=1.35.0,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "click (>=8.2.1,<9.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.56b0,<0.57)"
]


[tool.poetry.scripts]
proxene = "proxene.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
ruff = "^0.12.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
